# voice_assistant

./: .flake8  .gitignore  README.md  main.py  pyproject.toml
app/adapters/: open_ai_repository.py
app/entrypoints/: voice_listener.py
app/utils/: voice_transmitter.py
