[tool.poetry]
name = "voice-assistant"
version = "0.1.0"
description = "Raspberry PI Voice Assistant"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipdb = "^0.13.13"
gtts = "^2.5.0"
speechrecognition = "^3.10.1"
pyaudio = "^0.2.14"
python-dotenv = "^1.0.0"
openai = "^1.6.1"
flake8 = "^7.0.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
